--- a/social.html
+++ b/social.html
@@ -14,7 +14,7 @@
     <link href="css/fontello.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Электроэнергия</title>
+    <title>Социальная сфера</title>
 </head>
 <body>
     <header>
@@ -79,18 +79,19 @@
             </nav>
         </div>
     </header>
+
     <main>
         <div class="p-head-breadcrumb">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="col">
-                            <h2>Поставка электроэнергии</h2>                            
+                            <h2>Социальная сфера</h2>                            
                     </div>
                     <div class="col-auto pull-right">
                         <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Поставка электроэнергии</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Социальная сфера</li>
                                 </ol>
                             </nav>
                     </div>                    
@@ -98,95 +99,111 @@
             </div> 
         </div>
 
-        <div class="container">
-            <div class="row power-main-content">
-                <div class="col-xl-8 col-lg-8 col-md-12 power-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2608.562892368453!2d33.45133640166872!3d49.17090449388575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d74e2bc13c4733%3A0xcfd7b50502d89d84!2z0KHQstC40YjRgtC-0LLRgdC60LDRjyDRg9C7LiwgMywg0JrRgNC10LzQtdC90YfRg9CzLCDQn9C-0LvRgtCw0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgMzk2MDA!5e0!3m2!1sru!2sua!4v1550649839616" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-12 power-info">
-                    <ul>
-                        <li>
-                            <a href="docs/Power/Закон о рынке электроэнергии.pdf">
-                                    <i class="demo-icon icon-file-pdf"></i>
-                                    Закон о рынке электроэнергии.pdf
-                            </a>
-                        </li>
-                        <li>
-                            <a href="docs/Power/Кодекс коммерческого учета электроэнергии.pdf">
-                                <i class="demo-icon icon-file-pdf"></i>
-                                Кодекс коммерческого учета электроэнергии.pdf
-                            </a>
-                        </li>
-                        <li>
-                            <a href="docs/Power/Кодекс систем распределения.pdf">
-                                <i class="demo-icon icon-file-pdf"></i>
-                                Кодекс систем распределения.pdf
-                            </a>
-                        </li>
-                        <li>
-                            <a href="docs/Power/Лицензионные условия.pdf">
-                                <i class="demo-icon icon-file-pdf"></i>
-                                Лицензионные условия осуществления хозяйственной деятельности по поставке электрической энергии потребителю.pdf
-                            </a>
-                        </li>
-                        <li>
-                            <a href="docs/Power/Правила розничного рынка электроэнергии.pdf">
-                                <i class="demo-icon icon-file-pdf"></i>
-                                Правила розничного рынка электроэнергии.pdf
-                            </a>
-                        </li>
-                        <li>
-                            <a href="commercial_offer.html">
-                                <!-- <i class="demo-icon icon-file-pdf"></i> -->
-                                - Комерційна пропозиція на постачання електричної енергії
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="power-contacts">
-                        <span>Почтовый адрес:</span>
-                        <ul>
-                            <li>
-                                <i class="demo-icon icon-location"></i>
-                                ПАО "Укртатнафта", 39610, Украина, г.Кременчуг, ул.Свиштовская, 3.                                
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="power-contacts">
-                        <span>Контактные телефоны для обращения потребителей:</span>
-                        <ul>
-                            <li><i class="demo-icon icon-phone"></i>(0536) 76-85-55</li>
-                            <li><i class="demo-icon icon-phone"></i>76-83-19</li>
-                        </ul>
-                    </div>
-                    <div class="power-contacts">
-                        <span>e-mail</span>
-                        <ul>
-                            <li><a href="mailto:oge@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>oge@ukrtatnafta.com</a></li>
-                            <li><a href="mailto:harchenko-ov@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>harchenko-ov@ukrtatnafta.com</a></li>
-                        </ul>
-                    </div>
-                    <div class="power-contacts">
-                        <span>График работы колл-центра:</span>
-                        <ul>
-                            <li><span class="power-contacts-days">ПН-ЧТ</span> - 8.00-17.00</li>
-                            <li><span class="power-contacts-days">ПТ</span> - 8.00-15.45</li>
-                            <li><span class="power-contacts-days">CБ-ВС</span> - выходной</li>
-                        </ul>
-                    </div>
+        <div class="container social-headline">
+            <div class="row ">
+                <div class="col-12">
+                    <p class="text-ind">
+                        Имея большой производственный потенциал, ПАО "УКРТАТНАФТА" создала и развивает социальную сферу. Заботой о здоровье членов трудового коллектива продиктовано создание целого комплекса лечебно-оздоровительных и культурных учреждений. 
+                        <br/><b>Это:</b>
+                    </p>
                 </div>
             </div>
+            <!-- <hr> -->
         </div>
 
-        <div class="container">
-            <div class="row power-claim">
-                <div class="col">
-                    <p>В случае возникновения у потребителя электрической энергии жалоб, претензий или необходимости обращения или сообщения об угрозе электробезопасности для их рассмотрения необходимо обращаться по указанному выше почтовому/электронному адресу или по контактным телефонам. </p>
+        <section class="social-section">
+            <div class="container">
+                <div class="col-12">
+                    <p class="text-ind">
+                        <b>Санаторий - профилакторий "Ивушка" оздоровительного комплекса "Нефтехимик"</b> с лечебно-оздоровительной базой. Санаторий расположен в с. Омельник Кременчугского района.
+                    </p>
                 </div>
+                <div class="row">
+                    <div class="col-8">
+                        <img src="img/social-ivushka.jpg" alt="Ивушки">
+                    </div>
+                    <div class="col-4">
+                        <div class="power-contacts">
+                            <span>Почтовый адрес:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-location"></i>Пер. Солнечный 11, с. Омельник, Кременчугский район, Полтавская область, 39713.</li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Телефоны:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-phone"></i>(0536) 76-82-97 </li>
+                                <li><i class="demo-icon icon-phone"></i>(067) 530-32-51</li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>e-mail</span>                            
+                            <ul>
+                                <li><a href="mailto:ivushka@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>ivushka@ukrtatnafta.com</a></li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Сайт</span>                            
+                            <ul>
+                                <li><a href="http://ivushka.com.ua"><i class="demo-icon icon-home"></i>ivushka.com.ua</a></li>                                
+                            </ul>
+                        </div>
+                    </div>                      
+                </div>
+                <hr>
             </div>
-        </div>
-        
+        </section>
+
+        <section class="social-section">
+            <div class="container">
+                <div class="col-12">
+                    <p>
+                            <b>Детский лагерь отдыха "Солнечный" оздоровительного комплекса "Нефтехимик",</b> в котором отдыхают дети от 6-ти до 16-ти лет.        
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-8">
+                        <img src="img/social-children-camp.png" alt="Солнечный">
+                    </div>
+                    <div class="col-4">
+                        <div class="power-contacts">
+                            <span>Почтовый адрес:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-location"></i>пер. Солнечный 11, с. Омельник, Кременчугский район, Полтавская область, 39713</li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Телефоны:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-phone"></i>(067) 302-15-15</li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>e-mail</span>                            
+                            <ul>
+                                <li><a href="mailto:sunnycamp.ua@gmail.com"><i class="demo-icon icon-mail-alt"></i>sunnycamp.ua@gmail.com</a></li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Сайт</span>                            
+                            <ul>
+                                <li><a href="https://sunnycampua.wixsite.com/2018"><i class="demo-icon icon-home"></i>sunnycampua.wixsite.com</a></li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Соц сети:</span>                            
+                            <ul class="social-icons">
+                                <li><a href="https://www.facebook.com/profile.php?id=100016883553778 "><i class="demo-icon icon-facebook-official"></i></a></li>
+                                <li><a href="https://www.instagram.com/sunnycamp.ua/"><i class="demo-icon icon-instagram-filled"></i></a></li>                                
+                            </ul>
+                        </div>
+                    </div>                      
+                </div>
+                <hr>
+            </div>
+        </section>
     </main>
+
     <footer>
             <p>Create by: miraclus1@gmail.com</p>
     </footer>  
