Revert "Work continue"
This reverts commit e2977a0741a76bd1bb2acf1b529c86eb46890a0f.

--- a/production.html
+++ b/production.html
@@ -50,7 +50,7 @@
                                 <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
                                 <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-envira"></i> Экология</a>
-                                <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
+                                <a class="dropdown-item" href="#"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
                             </div>
@@ -93,7 +93,7 @@
                                 <li class="breadcrumb-item active" aria-current="page">Производство</li>
                             </ol>
                         </nav>
-                    </div>                 
+                    </div>                    
                 </div>            
             </div> 
         </div>
@@ -149,67 +149,35 @@
                     <div class="col-6">
                             <p>Переработка нефти осуществляется по топливно-масляной схеме с использованием следующих процессов:</p> 
                             <ul>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Обессоливания и обезвоживания нефти;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Первичной переработки нефти;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Вторичной перегонки бензина;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Вакуумной перегонки мазута;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Каталитического крекинга и риформинга;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Гидроочистки топлив;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Газофракционирования;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Деасфальтизации и очистки масляных фракций селективными растворителями;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Их депарафинизации и гидроочистки, сероочистки сухих газов;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Первичной переработки нефти;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Вторичной перегонки бензина;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Вторичной перегонки бензина;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Вакуумной перегонки мазута;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Каталитического крекинга и риформинга;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Гидроочистки топлив;</li>
+                                <li>Обессоливания и обезвоживания нефти</li>
+                                <li>Первичной переработки нефти</li>
+                                <li>Вторичной перегонки бензина</li>
+                                <li>Вакуумной перегонки мазута</li>
+                                <li>Каталитического крекинга и риформинга</li>
+                                <li>Гидроочистки топлив</li>
+                                <li>Газофракционирования</li>
+                                <li>Деасфальтизации и очистки масляных фракций селективными растворителями</li>
+                                <li>Их депарафинизации и гидроочистки, сероочистки сухих газов</li>
+                                <li>Первичной переработки нефти</li>
+                                <li>Вторичной перегонки бензина</li>
+                                <li>Вторичной перегонки бензина</li>
+                                <li>Вакуумной перегонки мазута</li>
+                                <li>Каталитического крекинга и риформинга</li>
+                                <li>Гидроочистки топлив</li>
                             </ul>
                             <p>Производств:</p>      
                             <ul>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Cеры;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Строительных и дорожных битумов;</li>
-                                <li><i class="demo-icon icon-angle-double-right"></i>Ароматических углеводородов;</li>
+                                <li>серы</li>
+                                <li>строительных и дорожных битумов</li>
+                                <li>ароматических углеводородов</li>
                             </ul> 
-                            <p>Проектная мощность первичной переработки нефти - <b>18,6 млн. тонн в год.</b></p>
-                    </div>  
-                     
-                </div>
-            </div>
-            <hr>
-        </section>
-        
-        <section class="production-section">
-            <div class="container">
-                <div class="row">                    
-                    <div class="col-4 production-img">
-                        <img src="img/facility_2.JPG" alt="Установка">
-                    </div>
-                    <!-- <div class="offset-2"></div> -->
-                    <div class="col-8">
-                        <p>Основное сырьё - нефть. Кроме неё предприятие перерабатывает газовый конденсат. Возможна переработка дополнительно вакуумного газойля со стороны в качестве сырья установок каталитического крекинга. Нефтяное сырье поступает на предприятие по трубопроводу и по железной дороге.</p>
+                            Проектная мощность первичной переработки нефти - <b>18,6 млн. тонн в год.</b>
                     </div>
                 </div>
             </div>
-            <hr>
         </section>
 
-        <section class="production-section">
-            <div class="container">
-                <div class="row">                    
-                    <div class="col-4 production-img">
-                        <img src="img/power-people.JPG" alt="Установка">
-                    </div>
-                    <!-- <div class="offset-2"></div> -->
-                    <div class="col-8">
-                        <p>Количество работающих на ПАО "Укртатнафта" составляет около <b>4000 человек.</b> Руководством предприятия уделяется постоянное внимание улучшению профессиональных качеств коллектива нефтепереработчиков, его стабильности. Предприятие имеет лицензию Министерства образования Украины на право проведения обучения по подготовке, переподготовке и повышению квалификации рабочих по основным профессиям.</p>
-                    </div>
-                </div>
-            </div>
-            <hr>
-        </section>
-
-        <!-- <section class="contact-from-section">
+        <section class="contact-from-section">
                 <h2 class="news-h2">Напишите нам</h2>
             <div class="container">
                 <div class="row justify-content-center">
@@ -227,8 +195,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-
+        </section>
     </main>
 
     <footer>
