--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
                                 <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-envira"></i> Экология</a>
-                                <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
+                                <a class="dropdown-item" href="#"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
                             </div>
