--- a/power.html
+++ b/power.html
@@ -50,7 +50,7 @@
                                 <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
                                 <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-envira"></i> Экология</a>
-                                <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
+                                <a class="dropdown-item" href="#"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
                             </div>
@@ -109,31 +109,31 @@
                         <li>
                             <a href="docs/Power/Закон о рынке электроэнергии.pdf">
                                     <i class="demo-icon icon-file-pdf"></i>
-                                    Закон о рынке электроэнергии.pdf
+                                    Закон о рынке электроэнергии.
                             </a>
                         </li>
                         <li>
                             <a href="docs/Power/Кодекс коммерческого учета электроэнергии.pdf">
                                 <i class="demo-icon icon-file-pdf"></i>
-                                Кодекс коммерческого учета электроэнергии.pdf
+                                Кодекс коммерческого учета электроэнергии.
                             </a>
                         </li>
                         <li>
                             <a href="docs/Power/Кодекс систем распределения.pdf">
                                 <i class="demo-icon icon-file-pdf"></i>
-                                Кодекс систем распределения.pdf
+                                Кодекс систем распределения.
                             </a>
                         </li>
                         <li>
                             <a href="docs/Power/Лицензионные условия.pdf">
                                 <i class="demo-icon icon-file-pdf"></i>
-                                Лицензионные условия осуществления хозяйственной деятельности по поставке электрической энергии потребителю.pdf
+                                Лицензионные условия осуществления хозяйственной деятельности по поставке электрической энергии потребителю.
                             </a>
                         </li>
                         <li>
                             <a href="docs/Power/Правила розничного рынка электроэнергии.pdf">
                                 <i class="demo-icon icon-file-pdf"></i>
-                                Правила розничного рынка электроэнергии.pdf
+                                Правила розничного рынка электроэнергии.
                             </a>
                         </li>
                         <li>
