--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-xl navbar navbar-light bg-white">
                 <a href="#" class="navbar-brand ">
                     <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
@@ -88,14 +88,16 @@
                     <li data-target="#carouselSliderUTN" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-item active">
-                    <img src="img/slider/1.png" alt="First slide" class="d-block w-100">
+                    <div class="cover-dark"></div>
+                    <img src="img/slider/1_1.png" alt="First slide" class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
-                            <h5 class="animated bounceInRight">Лучшие в своем деле</h5>
-                            <p class="animated bounceInLeft">Обратись и убедись</p>
+                            <h5 class="">Лучшие в своем деле</h5>
+                            <p class="">Обратись и убедись</p>
                           </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/slider/2.png" alt="Second slide" class="d-block w-100">
+                    <div class="cover-dark"></div>
+                    <img src="img/slider/2_2.png" alt="Second slide" class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="">Самая вкусная нефть</h5>
                         <p class="">Первая бочка бесплатно</p>
@@ -103,10 +105,11 @@
                     
                 </div>
                 <div class="carousel-item">
-                    <img src="img/slider/3_2.png" alt="Third slide" class="d-block w-100">
+                    <div class="cover-dark"></div>
+                    <img src="img/slider/3_3.png" alt="Third slide" class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5 class="animated bounceInLeft">Без нас нет движения</h5>
-                        <p class="animated bounceInRight">Двигайся с нами!</p>
+                        <h5 class="">Без нас нет движения</h5>
+                        <p class="">Двигайся с нами!</p>
                     </div>
                 </div>
             </div>
@@ -239,7 +242,7 @@
             </div>
         </section>
 
-        <section class="section-images">
+        <!-- <section class="section-images">
             <div class="container-fluid">
                 <div class="row images-section">                    
                     <div class="col-3">
@@ -287,7 +290,6 @@
                     </div><div class="col-3">
                         <a href="#news" class="images-reference">
                             <h2>Реализация нефтепродуктов</h2>
-                            <!-- <p>Основная новостная лента</p> -->
                         </a>
                         <img src="img/car.png" alt="Реализация нефтепродуктов">
                     </div>
@@ -300,7 +302,8 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
+
         <section class="contact-from-section">
                 <h2 class="news-h2">Напишите нам</h2>
             <div class="container">
@@ -312,8 +315,6 @@
                             <select name="forWho" form="nubexForm" class="contact-form-select">
                                     <option value="">Общие вопросы</option>
                                     <option value="">Webmaster</option>
-                                    <!-- <option value="">Чижиков</option>
-                                    <option value="">Кукушкина</option> -->
                                 </select>
                             <textarea rows="5" placeholder="Сообщение"  class=""></textarea>
                             <button type="submit" class="btn-submit">Отправить</button>
