--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <li class="li-publication">Публикации</li>
                     </ul>
                     <div class="row justify-content-between news-pub-collapse collapse show" id="newsCollapse">
-                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
@@ -150,7 +150,7 @@
                                 <h3>«Укртатнафта»: Ситуація у сфері забезпечення авіаперевезень нормалізована</h3>                            
                             </div>                    
                         </div>
-                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
@@ -161,7 +161,18 @@
                                 <h3>«Укртатнафта»: Ситуація </h3>                            
                             </div>                    
                         </div>
-                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
+                            <div class="news-wrap">
+                                <a href="#" class="news-link-wrap"></a>
+                                <div class="news-img-section">
+                                    <img src="img/news_2.jpg" alt="Новости">
+                                    <div class="news-bg-img"><img src="img/zoom-icon.svg" alt=""></div>
+                                </div>                            
+                                <span>30.01.2019</span>
+                                <h3>«Укртатнафта»: Ситуація у сфері забезпечення авіаперевезень нормалізована</h3>                            
+                            </div>                    
+                        </div>
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
@@ -173,9 +184,9 @@
                             </div>                    
                         </div>
                     </div>
-                        <div class="row justify-content-end btn-news-test" id="#all-news">
-                                <a href="news.html"><div class="btn-all-news animated bounceInLeft">Все новости</div></a>                    
-                        </div>
+                    <div class="row justify-content-end btn-news-test" id="#all-news">
+                            <a href="news.html"><div class="btn-all-news animated bounceInLeft">Все новости</div></a>                    
+                    </div>
                     
     
                     <div class="row justify-content-between news-pub-collapse collapse" id="publicationCollapse">
@@ -236,7 +247,28 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 parallax-col">
-                        <div class="parallax-window" data-parallax="scroll" data-image-src="img/parallax-bg-2.png"></div>
+                        <div class="cover-dark"></div>
+                        <div class="parallax-window" data-parallax="scroll" data-image-src="img/parallax-bg-1.JPG"></div>
+                        <div class="container-fluid">
+                            <div class="row parallax-text">
+                                <div class="col-4">
+                                    <i class="demo-icon icon-users-1"></i>
+                                    <p>4000 человек</p>
+                                </div>
+                                <div class="col-4">
+                                    <i class="demo-icon icon-droplet"></i>
+                                    <p>Мощность 18,6 млн. тонн в год</p>
+                                </div>
+                                <div class="col-4">
+                                    <i class="demo-icon icon-flight"></i>
+                                    <p>Крупнейшим производителем топлива для реактивных двигателей в Украине</p>
+                                </div>
+                                <!-- <div class="col-3">
+                                    <i class="demo-icon icon-droplet"></i>
+                                    <p>Мощность 18,6 млн. тонн в год</p>
+                                </div> -->
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
