--- a/power.html
+++ b/power.html
@@ -180,7 +180,7 @@
 
         <div class="container">
             <div class="row power-claim">
-                <div class="col">
+                <div class="col-12">
                     <p>В случае возникновения у потребителя электрической энергии жалоб, претензий или необходимости обращения или сообщения об угрозе электробезопасности для их рассмотрения необходимо обращаться по указанному выше почтовому/электронному адресу или по контактным телефонам. </p>
                 </div>
             </div>
