--- a/production.html
+++ b/production.html
@@ -83,10 +83,10 @@
         <div class="p-head-breadcrumb">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
-                    <div class="col">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 full-width" >
                             <h2>Производство</h2>                            
                     </div>
-                    <div class="col-auto pull-right">
+                    <div class="col-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 pull-right full-width">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
@@ -143,10 +143,10 @@
         <section class="production-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-6 production-img">
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 production-img">
                         <img src="img/facility.JPG" alt="Установка">
                     </div>
-                    <div class="col-6">
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                             <p>Переработка нефти осуществляется по топливно-масляной схеме с использованием следующих процессов:</p> 
                             <ul>
                                 <li><i class="demo-icon icon-angle-double-right"></i>Обессоливания и обезвоживания нефти;</li>
@@ -182,11 +182,11 @@
         <section class="production-section">
             <div class="container">
                 <div class="row">                    
-                    <div class="col-4 production-img">
+                    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 production-img">
                         <img src="img/facility_2.JPG" alt="Установка">
                     </div>
                     <!-- <div class="offset-2"></div> -->
-                    <div class="col-8">
+                    <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
                         <p>Основное сырьё - нефть. Кроме неё предприятие перерабатывает газовый конденсат. Возможна переработка дополнительно вакуумного газойля со стороны в качестве сырья установок каталитического крекинга. Нефтяное сырье поступает на предприятие по трубопроводу и по железной дороге.</p>
                     </div>
                 </div>
@@ -197,11 +197,11 @@
         <section class="production-section">
             <div class="container">
                 <div class="row">                    
-                    <div class="col-4 production-img">
+                    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 production-img">
                         <img src="img/power-people.JPG" alt="Установка">
                     </div>
                     <!-- <div class="offset-2"></div> -->
-                    <div class="col-8">
+                    <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
                         <p>Количество работающих на ПАО "Укртатнафта" составляет около <b>4000 человек.</b> Руководством предприятия уделяется постоянное внимание улучшению профессиональных качеств коллектива нефтепереработчиков, его стабильности. Предприятие имеет лицензию Министерства образования Украины на право проведения обучения по подготовке, переподготовке и повышению квалификации рабочих по основным профессиям.</p>
                     </div>
                 </div>
