Нав  меню для телефонов

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
-                                    <img src="img/news_2.jpg" alt="Новости">
+                                    <img src="img/car.png" alt="Новости">
                                     <div class="news-bg-img"><img src="img/zoom-icon.svg" alt=""></div>
                                 </div>                            
                                 <span>30.01.2019</span>
@@ -154,7 +154,7 @@
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
-                                    <img src="img/news_2.jpg" alt="Новости">
+                                    <img src="img/ecology.JPG" alt="Новости">
                                     <div class="news-bg-img"><img src="img/zoom-icon.svg" alt=""></div>
                                 </div>                            
                                 <span>30.01.2019</span>
