begin work on social

--- a/social.html
+++ b/social.html
@@ -119,10 +119,10 @@
                     </p>
                 </div>
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
                         <img src="img/social-ivushka.jpg" alt="Ивушки">
                     </div>
-                    <div class="col-4">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
                         <div class="power-contacts">
                             <span>Почтовый адрес:</span>                            
                             <ul>
@@ -158,14 +158,14 @@
             <div class="container">
                 <div class="col-12">
                     <p>
-                            <b>Детский лагерь отдыха "Солнечный" оздоровительного комплекса "Нефтехимик",</b> в котором отдыхают дети от 6-ти до 16-ти лет.        
+                        <b>Детский лагерь отдыха "Солнечный" оздоровительного комплекса "Нефтехимик",</b> в котором отдыхают дети от 6-ти до 16-ти лет.        
                     </p>
                 </div>
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
                         <img src="img/social-children-camp.png" alt="Солнечный">
                     </div>
-                    <div class="col-4">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
                         <div class="power-contacts">
                             <span>Почтовый адрес:</span>                            
                             <ul>
@@ -195,6 +195,106 @@
                             <ul class="social-icons">
                                 <li><a href="https://www.facebook.com/profile.php?id=100016883553778 "><i class="demo-icon icon-facebook-official"></i></a></li>
                                 <li><a href="https://www.instagram.com/sunnycamp.ua/"><i class="demo-icon icon-instagram-filled"></i></a></li>                                
+                            </ul>
+                        </div>
+                    </div>                      
+                </div>
+                <hr>
+            </div>
+        </section>
+
+        <section class="social-section">
+            <div class="container">
+                <div class="col-12">
+                    <p>
+                        <b>Медико-санитарная часть "Нефтехимик"</b> с оздоровительным бассейном и новейшей диагностической аппаратурой. Не только работники завода, но и жители города пользуются медицинским обслуживанием, которое включает в себя обследование, лечение и реабилитацию.     
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
+                        <img src="img/medical.jpg" alt="Медико-санитарная часть">
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
+                        <div class="power-contacts">
+                            <span>Почтовый адрес:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-location"></i>ул. Свиштовская, 3, г. Кременчуг, Полтавская область, 39610</li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Телефоны:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-phone"></i>(0536) 76-80-90</li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Факс:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-fax"></i>(0536) 76-18-18</li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>e-mail</span>                            
+                            <ul>
+                                <li><a href="mailto:medical@mednafta.com.ua"><i class="demo-icon icon-mail-alt"></i>medical@mednafta.com.ua</a></li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Сайт</span>                            
+                            <ul>
+                                <li><a href="http://www.mednafta.com.ua/"><i class="demo-icon icon-home"></i>www.mednafta.com.ua</a></li>                                
+                            </ul>
+                        </div>
+                    </div>                      
+                </div>
+                <hr>
+            </div>
+        </section>
+
+        <section class="social-section">
+            <div class="container">
+                <div class="col-12">
+                    <p>
+                       <b>Спортивный комплекс Центра культуры, спорта и отдыха "Нефтехимик"</b> в который входят стадион, спортивные площадки и лучший в Полтавской области плавательный бассейн "Дельфин" олимпийского типа.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
+                        <img src="img/Delfin.jpg" alt="Спортивный комплекс Нефтехимик">
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
+                        <div class="power-contacts">
+                            <span>Почтовый адрес:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-location"></i>проспект Леси Украинки, 33, г. Кременчуг, Полтавская область, 39622</li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Телефоны:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-phone"></i>(0536) 76-10-78 </li>  
+                                <li><i class="demo-icon icon-phone"></i>(067) 951-76-86 </li>                                      
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>e-mail</span>                            
+                            <ul>
+                                <li><a href="mailto:gordienko-as@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>gordienko-as@ukrtatnafta.com </a></li>                                
+                                <li><a href="mailto:gordey74@ukr.net"><i class="demo-icon icon-mail-alt"></i>gordey74@ukr.net</a></li>  
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Сайт</span>                            
+                            <ul>
+                                <li><a href="http://dosug.webgid.info"><i class="demo-icon icon-home"></i>www.dosug.webgid.info</a></li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Соц сети:</span>                            
+                            <ul class="social-icons">
+                                <li><a href="https://www.facebook.com/groups/950391858383928"><i class="demo-icon icon-facebook-official"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100015136900274"><i class="demo-icon icon-facebook-official"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100000667493060"><i class="demo-icon icon-facebook-official"></i></a></li>                                          
                             </ul>
                         </div>
                     </div>                      
