work with ecology

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="container-fluid">
-            <nav class="navbar navbar-expand-xl navbar navbar-light bg-white">
+            <nav class="navbar navbar-expand-xl navbar navbar-light bg-white main-menu">
                 <a href="#" class="navbar-brand ">
                     <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
                 </a>
@@ -48,7 +48,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
                                 <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-envira"></i> Экология</a>
+                                <a class="dropdown-item" href="ecology.html"><i class="demo-icon icon-envira"></i> Экология</a>
                                 <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
