--- a/social.html
+++ b/social.html
@@ -302,6 +302,105 @@
                 <hr>
             </div>
         </section>
+
+        <section class="social-section">
+            <div class="container">
+                <div class="col-12">
+                    <p>
+                       <b>Дворец культуры Центра культуры, спорта и отдыха "Нефтехимик",</b> в котором работают любительские объединения и коллективы народного творчества, в том числе - детские коллективы. Во Дворце имеется кинозал, кафе и др.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
+                        <img src="img/house-of-culture.png" alt="Дом культуры Нефтехимик">
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
+                        <div class="power-contacts">
+                            <span>Почтовый адрес:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-location"></i>проспект Леси Украинки, 33, г. Кременчуг, Полтавская область, 39622</li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Телефоны:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-phone"></i>(0536) 76-81-58 </li>  
+                                <li><i class="demo-icon icon-phone"></i>76-89-24 </li>   
+                                <li><i class="demo-icon icon-phone"></i>76-81-59 </li>   
+                                <li><i class="demo-icon icon-phone"></i>(093) 700-59-92 </li>   
+                                <li><i class="demo-icon icon-phone"></i>(067) 531-75-98 </li>   
+                                <li><i class="demo-icon icon-phone"></i>(096) 238-88-22 </li>                                      
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>e-mail</span>                            
+                            <ul>
+                                <li><a href="mailto:lutsenko@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>lutsenko@ukrtatnafta.com  </a></li>                                
+                                <li><a href="mailto:moysa-av@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>moysa-av@ukrtatnafta.com </a></li>  
+                                <li><a href="mailto:urman@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>urman@ukrtatnafta.com </a></li> 
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Сайт</span>                            
+                            <ul>
+                                <li><a href="http://dosug.webgid.info"><i class="demo-icon icon-home"></i>www.dosug.webgid.info</a></li>                                
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Соц сети:</span>                            
+                            <ul class="social-icons">
+                                <li><a href="https://www.facebook.com/pk.naftohimik"><i class="demo-icon icon-facebook-official"></i></a></li>                                                                          
+                            </ul>
+                        </div>
+                    </div>                      
+                </div>
+                <hr>
+            </div>
+        </section>
+
+        <section class="social-section">
+            <div class="container">
+                <div class="col-12">
+                    <p>
+                       <b>Комбинат общественного питания</b>
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
+                        <img src="img/tiramisu.jpg" alt="КОП Нефтехимик">
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
+                        <div class="power-contacts">
+                            <span>Почтовый адрес:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-location"></i>ул. Свиштовская, д. 3, г. Кременчуг, Полтавская область, 39610</li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Телефоны:</span>                            
+                            <ul>
+                                <li><i class="demo-icon icon-phone"></i>(0536) 76-81-07 (прием заказов) </li>  
+                                <li><i class="demo-icon icon-phone"></i>(0536) 76-84-81 (бухгалтерия) </li>                                     
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>e-mail</span>                            
+                            <ul>
+                                <li><a href="mailto:liubchenko@ukrtatnafta.com "><i class="demo-icon icon-mail-alt"></i>liubchenko@ukrtatnafta.com</a></li>                                
+                                <li><a href="mailto:vovchuk@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>vovchuk@ukrtatnafta.com</a></li>
+                            </ul>
+                        </div>
+                        <div class="power-contacts">
+                            <span>Соц сети:</span>                            
+                            <ul class="social-icons">
+                                <li><a href="https://www.facebook.com/profile.php?id=100024045107664"><i class="demo-icon icon-facebook-official"></i></a></li>                                                                          
+                            </ul>
+                        </div>
+                    </div>                      
+                </div>
+                <hr>
+            </div>
+        </section>
     </main>
 
     <footer>
