--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                                 <a class="nav-link" href="#" id="navbarDropdownMenuLink"  aria-haspopup="true"
                                  aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
+                                    <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
+                                    <a class="dropdown-item" href="trade_og.html"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
                                 </div>
                             </li>
