--- a/power.html
+++ b/power.html
@@ -19,15 +19,18 @@
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-xl navbar navbar-light bg-white">
-                <a href="index.html" class="navbar-brand ">
-                    <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
-                </a>
-                <ul class="lang align-self-center">
-                    <a href="#"><li>UA</li></a>
-                    <a href="#"><li class="lang-active">RU</li></a>
-                    <a href="#"><li>EN</li></a>
-                </ul>
+            <nav class="navbar navbar-expand-xl navbar-light bg-white main-menu">
+                <div class="menu-logo-lang">
+                    <a href="index.html" class="navbar-brand ">
+                        <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
+                    </a>
+                    <ul class="lang align-self-center">
+                        <a href="#"><li>UA</li></a>
+                        <a href="#"><li class="lang-active">RU</li></a>
+                        <a href="#"><li>EN</li></a>
+                    </ul>
+                </div>
+                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,7 +52,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
                                 <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-envira"></i> Экология</a>
+                                <a class="dropdown-item" href="ecology.html"><i class="demo-icon icon-envira"></i> Экология</a>
                                 <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
