--- a/ecology.html
+++ b/ecology.html
@@ -28,14 +28,17 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-xl navbar-light bg-white main-menu">
-                <a href="index.html" class="navbar-brand ">
-                    <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
-                </a>
-                <ul class="lang align-self-center">
-                    <a href="#"><li>UA</li></a>
-                    <a href="#"><li class="lang-active">RU</li></a>
-                    <a href="#"><li>EN</li></a>
-                </ul>
+                <div class="menu-logo-lang">
+                    <a href="index.html" class="navbar-brand ">
+                        <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
+                    </a>
+                    <ul class="lang align-self-center">
+                        <a href="#"><li>UA</li></a>
+                        <a href="#"><li class="lang-active">RU</li></a>
+                        <a href="#"><li>EN</li></a>
+                    </ul>
+                </div>
+                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
@@ -57,7 +60,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
                                 <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-envira"></i> Экология</a>
+                                <a class="dropdown-item" href="ecology.html"><i class="demo-icon icon-envira"></i> Экология</a>
                                 <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
@@ -110,37 +113,37 @@
             
             <div class="container container-ecology" >
                 <div class="row">
-                    <aside class="col-md-3 col-sm-0 aside-colspy">
+                    <aside class="col-md-3 col-lg-3 aside-colspy">
                         <nav id="navbar-ecology" class="navbar sticky-top">
                             <a class="navbar-brand" href="#">Экология</a>
                             <nav class="nav nav-pills flex-column nav-ecology">
                                 <a class="nav-link" href="#item-1">Экологическая политика:</a>
-                                <nav class="nav nav-pills flex-column">
-                                    <a class="nav-link ml-3 my-1" href="#item-1-1">Наш девиз</a>
-                                    <a class="nav-link ml-3 my-1" href="#item-1-2">Основная цель</a>
-                                    <a class="nav-link ml-3 my-1" href="#item-1-3">Основные принципы</a>                                    
+                                <nav class="nav nav-pills ">
+                                    <a class="nav-link ml-3 my-1" href="#item-1-1">- Наш девиз</a>
+                                    <a class="nav-link ml-3 my-1" href="#item-1-2">- Основная цель</a>
+                                    <a class="nav-link ml-3 my-1" href="#item-1-3">- Основные принципы</a>                                    
                                 </nav>
                                 <a class="nav-link" href="#item-2">1. Охрана атмосферного воздуха</a>
-                                <nav class="nav nav-pills flex-column">
-                                    <a class="nav-link ml-3 my-1" href="#item-2-1">Свидетельство о соответствии</a>
-                                    <a class="nav-link ml-3 my-1" href="#item-2-2">Измерения</a>                           
+                                <nav class="nav nav-pills ">
+                                    <a class="nav-link ml-3 my-1" href="#item-2-1">- Свидетельство о соответствии</a>
+                                    <a class="nav-link ml-3 my-1" href="#item-2-2">- Измерения</a>                           
                                 </nav>
                                 <a class="nav-link" href="#item-3">2. Охрана водных ресурсов</a>
-                                <nav class="nav nav-pills flex-column">
-                                    <a class="nav-link ml-3 my-1" href="#item-3-1">Карта</a>
-                                    <a class="nav-link ml-3 my-1" href="#item-3-2">Объекты изучения</a>
-                                    <a class="nav-link ml-3 my-1" href="#item-3-3">Таблица</a>
+                                <nav class="nav nav-pills ">
+                                    <a class="nav-link ml-3 my-1" href="#item-3-1">- Карта</a>
+                                    <a class="nav-link ml-3 my-1" href="#item-3-2">- Объекты изучения</a>
+                                    <a class="nav-link ml-3 my-1" href="#item-3-3">- Таблица</a>
                                 </nav>
                                 <a class="nav-link" href="#item-4">3. Обращение с отходами</a>
-                                <nav class="nav nav-pills flex-column">
-                                    <a class="nav-link ml-3 my-1" href="#item-4-1">Карта</a>
-                                    <a class="nav-link ml-3 my-1" href="#item-4-2">Динамика показателей</a>
-                                    <a class="nav-link ml-3 my-1" href="#item-4-3">Сертификат</a>
+                                <nav class="nav nav-pills ">
+                                    <a class="nav-link ml-3 my-1" href="#item-4-1">- Карта</a>
+                                    <a class="nav-link ml-3 my-1" href="#item-4-2">- Динамика показателей</a>
+                                    <!-- <a class="nav-link ml-3 my-1" href="#item-4-3">Сертификат</a> -->
                                 </nav>
                             </nav>
                         </nav>
                     </aside>
-                    <div class="col-xl-9 col-lg-12">
+                    <div class="col-xl-9 col-lg-9">
                             <div data-spy="scroll" data-target="#navbar-ecology" data-offset="0">
                                 <section class="section-policy">                                   
                                             <h2 id="item-1">ЭКОЛОГИЧЕСКАЯ ПОЛИТИКА ПАО «Укртатнафта»</h2>
@@ -241,7 +244,7 @@
                                     <p>Предприятие участвует в реализации государственной политики в сфере обращения с отходами направленной на минимизацию отходов, рациональное использование и экологически безопасное размещение отходов, стремится к максимально возможному использованию отходов в целях снижения воздействия на объекты окружающей среды.
                                             Промышленные и бытовые отходы, образующиеся при переработке нефти и нефтепродуктов, подлежат утилизации или захоронению согласно разработанных на предприятии действующих общезаводских инструкций в области обращения с отходами производства.</p>
                                     <p>Предприятием эксплуатируется специализированный полигон, отвечающий экологическим нормам, для захоронения промышленных отходов III и IV классов опасности, образующиеся в производственных процессах ПАО: отработанные катализаторы, цеолиты, нефтешламы, отходы, содержащие нефтепродукты. <br/>
-                                    (<a class="ecology-link" data-toggle="collapse" data-target="#map-pt" id="item-4-2"><i class="demo-icon icon-map"></i>карта</i></a>)</p>
+                                    (<a id="item-4-1" class="ecology-link" data-toggle="collapse" data-target="#map-pt" id="item-4-2"><i class="demo-icon icon-map"></i>карта</i></a>)</p>
                                         <div id="map-pt" class="collapse">
                                             <div id="google-map-pt" data-latitude="49.169133" data-longitude="33.500563"></div>
                                         </div>        
@@ -262,7 +265,7 @@
                                     <p>Каждый отход на предприятии дифференцирован и учтён. Ежегодно ведутся государственные статистические отчётности по формам № 1- отходы, № 1 — экологические затраты, а на постоянной основе — первичный учёт отходов по типовой форме № 1-ВТ: <br/>
                                         <a id="item-4-2" class="ecology-link" href="ecofiles/dynamic.doc"><i class="demo-icon icon-file-pdf"></i> Динамика основных показателей в области обращения с отходами.pdf </a></p>
                                     <p>В ПАО «Укртатнафта» внедрена система экологического управления ДСТУ ISO 14001:2006, что подтверждается сертификатом соответствия, выданным ГП «Полтавастандартметрология». <br/>
-                                        <a id="item-4-3" class="ecology-link" href="ecofiles/cert-iso.pdf"><i class="demo-icon icon-file-pdf"></i> Сертификат.pdf </a>
+                                        <a id="" class="ecology-link" href="ecofiles/cert-iso.pdf"><i class="demo-icon icon-file-pdf"></i> Сертификат.pdf </a>
                                     </p>
                                     <p>Данный сертификат подтверждает высокий уровень системы экологическо-го управления на предприятии. Введённая система направлена
                                          на качественное повышение уровня управления в области охраны окружающей среды и расшире-ние эффективного сотрудничества в этом 
